src/objects/Im_Investigation__c.object
<CustomObject>
    <fields>
        <fullName>Attorney_Involvement__c</fullName>
        <label>Attorney Involvement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Background_of_Placement__c</fullName>
        <label>Background of Placement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conclusion_of_Fact__c</fullName>
        <label>Conclusion of Fact</label>
        <picklist>
            <picklistValues>
                <fullName>Evidence Supports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence Does Not Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Investigating_Parties__c</fullName>
        <label>External Investigating Parties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factual_Findings__c</fullName>
        <label>Factual Findings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Im_Incident__c</fullName>
        <label>Incident</label>
        <referenceTo>Im_Incident__c</referenceTo>
        <relationshipLabel>Im_Investigations</relationshipLabel>
        <relationshipName>Im_Investigations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Internal_Investigating_Parties__c</fullName>
        <label>Internal Investigating Parties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation_End_Date__c</fullName>
        <label>Investigation End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Investigation_Start_Date__c</fullName>
        <label>Investigation Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disregarded</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary_on_Conclusion__c</fullName>
        <label>Summary on Conclusion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Im_Investigation</label>
    <nameField>
        <displayFormat>IV-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Im_Investigations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>